Remind Ted before a CFP closes, not after
CfpOpened.closesOn was recorded and then read by nobody. It now becomes a
VEVENT on the private feed at the closing instant, with alarms the device
fires locally — the same machinery as the hotel cancel-deadline
reminders, which is the whole reason the deadline is a ZonedTimestamp.

72 and 24 hours before, not the hotel source's 48/24/4. Acting on a CFP
means writing an abstract, which is days of work rather than the single
click that cancels a hotel. That trade has a cost worth naming: the
hotel's 4h alarm is a backstop for a deadline recorded inside 24h, where
iOS silently skips the already-past earlier alarms. A CFP recorded three
days before it closes has the same hazard and no backstop. Recorded in
the class rather than left to be rediscovered.

This is the second contributor the feed has ever had, so ICalEventSource
finally earns itself — held back through Phase 1 under "no abstraction
before the second user", and arriving now with two real implementations
instead of one speculative one. The hotel deadlines move out of the
assembler unchanged, and their tests move with them: they were reaching
through the assembler to get at logic that now has its own class.

The sources are named in the constructor rather than injected as a
List<ICalEventSource>. Wiring them by type would make the feed's contents
depend on which beans happen to exist, and the feed is unredacted owner
data behind a single URL — what goes in it should be a decision written
down in one place, not an emergent property of the bean graph. A third
source means editing that constructor, deliberately.

The assembler's own test is now about composition, because that is all
it does: a source silently missing from the feed looks exactly like "no
deadlines right now" and so never announces itself.

Slice 3 of docs/ConferenceSubmissionTrackingPlan.md, third of four
commits. The radar grouping is last.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.c